--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "backened",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "A backened Leaning tutorial ",
+  "description": "A backend Leaning tutorial ",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -9,12 +9,17 @@
   },
   "keywords": [
     "JavaScript",
-    "Backened",
+    "Backend",
     "Chai"
   ],
   "author": "Atulya Kumar",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.7"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongoose": "^8.6.3"
   }
 }
